[metadata]
name = irt2
version = 1.0.1
author = Felix Hamann
author_email = felix.hamann@hs-rm.de

description = IRT2
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/lavis-nlp/irt2
project_urls =
    Bug Tracker = https://github.com/lavis-nlp/irt2/issues

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.9
install_requires =
    irt-data>=1.2, <2
    ktz<2
    click>=8.1, <9
    pyyaml>=5
    matplotlib
    tabulate
    jupyter
    pretty_errors

[options.extras_require]
dev =
    twine
    build
    pudb
    ipython
    black
    flake8
    pytest


[options.entry_points]
console_scripts =
                irt2 = irt2.evaluation:main

[flake8]
# black default
max-line-length = 89
ignore =
       D105  # docstring for magic methods
       D107  # docstring in __init__